--- a/index.html
+++ b/index.html
@@ -2,11 +2,265 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: {{projectTitle}}</title>
+    <title>Интернет-магазин электроники "Device"</title>
   </head>
   <body>
+    <h1 class="visually-hidden">Магазин электроники "Device"</h1>
+    <header class="page-header">
+      <div class="container">
+        <div class="page-header__wrapper">
+          <a>
+            <img class="page-header__logo" src="" alt='логотип интернет магазина "Device"'>
+          </a>
+          <div class="page-header__user-menu">
+            <form class="search-form" action="#" method="get">
+              <input class="search-form__input" type="text" name="search" placeholder="Текст поиска">
+              <button class="search-form__button" type="submit">Найти</button>
+            </form>
+            <ul class="user-menu__list">
+              <li class="user-menu__item"><a class="user-menu__link" href="#">Войти</a></li>
+              <li class="user-menu__item"><a class="user-menu__link" href="#">Сравнить</a></li>
+              <li class="user-menu__item"><a class="user-menu__link" href="#">Корзина</a></li>
+            </ul>
+          </div>
+          <nav class="page-header__navigation">
+            <ul class="navigation__list">
+              <li class="navigation__item"><a class="navigation__link" href="#">Каталог товаров</a></li>
+              <li class="navigation__item"><a class="navigation__link" href="#">Доставка</a></li>
+              <li class="navigation__item"><a class="navigation__link" href="#">Гарантия</a></li>
+              <li class="navigation__item"><a class="navigation__link" href="#">Контакты</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <main class="main-content">
+      <div class="container">
+        <section class="products-slider">
+          <h2 class="visually-hidden">Слайдер хитовых товаров</h2>
+            <ol class="products-slider__list">
+              <li class="products-slider__item products-slider__item--active">
+                <div class="products-slider__photos">
+                    <img class="products-slider__photo" src="" alt="квадрокоптер">
+                    <button class="photos__pre-btn">назад</button>
+                    <button class="photos__post-btn">вперед</button>
+                </div>
+                <div class="products-slider__card">
+                  <p class="card__description">Порхает как бабочка,
+                    жалит как пчела!</p>
+                  <p class="card__text">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
+                  </p>
+                  <a class="card__link" href="#">Подробнее</a>
+                  <ol class="card__btn-list">
+                    <li class="card__btn-item card__btn-item--active">1</li>
+                    <li class="card__btn-item">2</li>
+                    <li class="card__btn-item">3</li>
+                  </ol>
+                  <dl class="card__characteristics">
+                    <dt>800м</dt>
+                    <dd>Дальность полета</dd>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+                    <dt>50м</dt>
+                    <dd>Радиус поражения</dd>
+                  </dl>
+                </div>
+              </li>
+              <li class="products-slider__item">
+                <div class="products-slider__photos">
+                  <img class="products-slider__photo" src="" alt="фитнес-браслет">
+                  <button class="photos__pre-btn">назад</button>
+                  <button class="photos__post-btn">вперед</button>
+              </div>
+              <div class="products-slider__card">
+                <p class="card__description">Худеем
+                  правильно!</p>
+                <p class="card__text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
+                </p>
+                <a class="card__link" href="#">Подробнее</a>
+                <ol class="card__btn-list">
+                  <li class="card__btn-item card__btn-item--active">1</li>
+                  <li class="card__btn-item">2</li>
+                  <li class="card__btn-item">3</li>
+                </ol>
+                <dl class="card__characteristics">
+                  <dt>48 часов</dt>
+                  <dd>Без подзарядки</dd>
+                </dl>
+              </div>
+              </li>
+              <li class="products-slider__item">
+                <div class="products-slider__photos">
+                  <img class="products-slider__photo" src="" alt="селфи-палка">
+                  <button class="photos__pre-btn">назад</button>
+                  <button class="photos__post-btn">вперед</button>
+              </div>
+              <div class="products-slider__card">
+                <p class="card__description">Делай селфи,
+                  как Бен Стиллер! </p>
+                <p class="card__text">
+                  Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.
+                </p>
+                <a class="card__link" href="#">Подробнее</a>
+                <ol class="card__btn-list">
+                  <li class="card__btn-item card__btn-item--active">1</li>
+                  <li class="card__btn-item">2</li>
+                  <li class="card__btn-item">3</li>
+                </ol>
+                <dl class="card__characteristics">
+                  <dt>8,5 м</dt>
+                  <dd>Длина палки</dd>
 
+                  <dt>5 кг</dt>
+                  <dd>Вес палки</dd>
+
+                  <dt>Карбон</dt>
+                  <dd>Материал</dd>
+                </dl>
+              </div>
+              </li>
+            </ol>
+        </section>
+        <section class="product-sections">
+          <h2  class="visually-hidden">Разделы товаров</h2>
+          <ul class="product-sections__list">
+            <li class="product-sections__item">
+              <a class="product-sections__link" href="#">
+                <div class="image-wrapper">
+                  <svg class="product-sections__image"></svg>
+                </div>
+                <b class="product-sections__text">Виртуальная реальность</b>
+              </a>
+            </li>
+            <li class="product-sections__item">
+              <a class="product-sections__link" href="#">
+                <div class="image-wrapper">
+                  <svg class="product-sections__image"></svg>
+                </div>
+                <b class="product-sections__text">Моноподы для селфи</b>
+              </a>
+            </li>
+            <li class="product-sections__item">
+              <a class="product-sections__link" href="#">
+                <div class="image-wrapper">
+                  <svg class="product-sections__image"></svg>
+                </div>
+                <b class="product-sections__text">Экшн-камеры</b>
+              </a>
+            </li>
+            <li class="product-sections__item">
+              <a class="product-sections__link" href="#">
+                <div class="image-wrapper">
+                  <svg class="product-sections__image"></svg>
+                </div>
+                <b class="product-sections__text">Фитнес-браслеты</b>
+              </a>
+            </li>
+            <li class="product-sections__item">
+              <a class="product-sections__link" href="#">
+                <div class="image-wrapper">
+                  <svg class="product-sections__image"></svg>
+                </div>
+                <b class="product-sections__text">Умные часы</b>
+              </a>
+            </li>
+            <li class="product-sections__item">
+              <a class="product-sections__link" href="#">
+                <div class="image-wrapper">
+                  <svg class="product-sections__image"></svg>
+                </div>
+                <b class="product-sections__text">Квадрокоптеры</b>
+              </a>
+            </li>
+          </ul>
+        </section>
+        <section class="services">
+          <h2 class="visually-hidden">Услуги</h2>
+          <div class="services__slider">
+            <button class="services__btn services__btn--active" type="button">Доставка</button>
+            <button class="services__btn" type="button">Гарантия</button>
+            <button class="services__btn" type="button">Кредит</button>
+          </div>
+          <ul class="services__list">
+            <li class="services__item">
+              <h3 class="services__title">Доставка</h3>
+              <p class="services__text">Мы с удовольствием доставим ваш товар прямо
+                к вашему подъезду совершенно бесплатно! Ведь
+                мы неплохо заработаем, поднимая его на ваш этаж.</p>
+            </li>
+            <li class="services__item">
+              <h3 class="services__title">Гарантия</h3>
+              <p class="services__text">Если из-за возгорания купленного у нас товара у вас
+                сгорит дом — не переживайте, мы выдадим вам новый.
+                Товар, не дом, конечно же.</p>
+            </li>
+            <li class="services__item">
+              <h3 class="services__title">Кредит</h3>
+              <p class="services__text">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
+            </li>
+          </ul>
+        </section>
+        <div class="delivery-info">
+          <div class="delivery-info__image-wrapper">
+            <svg class="delivery-info__image"></svg>
+          </div>
+          <b class="delivery-info__text">Доставим редкий товар под заказ</b>
+        </div>
+      </div>
+      <div class="additional-info">
+        <section class="additional-info__about-us">
+          <h2 class="additional-info__title">О нас</h2>
+          <p class="additional-info__text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+          <p class="additional-info__text">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+          <ul class="additional-info__list">
+            <li class="additional-info__item">Меловые линии</li>
+            <li class="additional-info__item">СДИК</li>
+            <li class="additional-info__item">ТоксБерри</li>
+          </ul>
+          <a href="" class="additional-info__link">Подробнее о нас</a>
+        </section>
+        <section class="contacts">
+          <h2 class="additional-info__title">Контакты</h2>
+          <p class="additional-info__text">Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки. </p>
+          <b class="additional-info__name">Интернет-магазин «Девайс»</b>
+          <p class="additional-info__text">Санкт-Петербург, набережная реки Карповки, 5, литера П. <a href="tel:+7128121212">+7 (812) 812-12-12</a></p>
+          <b class="additional-info__name">Время работы</b>
+          <p class="additional-info__text">пн—пт: с 10:00 до 22:00<br>сб—вс: с 10:00 до 19:00</p>
+          <a href="№" class="additional-info__link">Напишите нам</a>
+        </section>
+      </div>
+      <section class="newsletter-subscribe">
+        <b class="newsletter-subscribe__title">Подпишитесь на рассылку</b>
+        <p class="newsletter-subscribe__text">Еженедельный дайджест с обзорами новинок,
+            длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
+        <form class="newsletter-subscribe__form" action="#" method="get">
+          <input type="email" name="email" placeholder="Ваш e-mail">
+          <button class="newsletter-subscribe__btn">Подписаться</button>
+          <span class="">Это бесплатно</span>
+        </form>
+        <span class="newsletter-subscribe__span">Это бесплатно</span>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <div class="container">
+        <img class="page-footer__logo" src="" alt="Логотип интернет-магазина 'Device'">
+        <div class="page-footer__info">
+          <p class="page-footer__adress">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+          <ul class="page-footer__list">
+            <li class="page-footer__item">Доставка</li>
+            <li class="page-footer__item">Гарантия</li>
+            <li class="page-footer__item">Контакты</li>
+          </ul>
+          <a class="page-footer__link" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
+        </div>
+        <div class="page-footer__links">
+          <ul class="page-footer__social-list">
+            <li class="secial-list__item">FB</li>
+            <li class="secial-list__item">INST</li>
+            <li class="secial-list__item">TWITTER</li>
+          </ul>
+          <a class="html-academy__link" href="https://htmlacademy.ru/study"></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
