--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Интернет-магазин электроники "Device"</title>
+    <title>Device: главная страница</title>
   </head>
   <body>
     <h1 class="visually-hidden">Магазин электроники "Device"</h1>
@@ -132,7 +132,7 @@
               </a>
             </li>
             <li class="product-sections__item">
-              <a class="product-sections__link" href="#">
+              <a class="product-sections__link" href="catalog.html">
                 <div class="image-wrapper">
                   <svg class="product-sections__image"></svg>
                 </div>
