--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,8 @@
               <button class="search-form__button" type="submit">Найти</button>
             </form>
             <ul class="user-menu__list">
-              <li class="user-menu__item"><a class="user-menu__link" href="#">Войти</a></li>
+              <li class="user-menu__item"><a class="user-menu__link" href="#">Илья Кузьмичев</a></li>
+              <li class="user-menu__item"><a class="user-menu__link" href="#">Выйти</a></li>
               <li class="user-menu__item"><a class="user-menu__link" href="#">Сравнить</a></li>
               <li class="user-menu__item"><a class="user-menu__link" href="#">Корзина</a></li>
             </ul>
