Исправил некоторые детали в разметке

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           <a href="№" class="additional-info__link">Напишите нам</a>
         </section>
       </div>
-      <section class="newsletter-subscribe">
+      <article class="newsletter-subscribe">
         <b class="newsletter-subscribe__title">Подпишитесь на рассылку</b>
         <p class="newsletter-subscribe__text">Еженедельный дайджест с обзорами новинок,
             длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
@@ -238,7 +238,7 @@
           <span class="">Это бесплатно</span>
         </form>
         <span class="newsletter-subscribe__span">Это бесплатно</span>
-      </section>
+      </article>
     </main>
     <footer class="page-footer">
       <div class="container">
