--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <title>Device: моноподы для селфи</title>
   </head>
   <body>
-    <h1 class="visually-hidden">Магазин электроники "Device"</h1>
+    <h1 class="visually-hidden">Каталог моноподов для селфи</h1>
     <header class="page-header">
       <div class="container">
         <div class="page-header__wrapper">
@@ -175,11 +175,11 @@
           </ul>
           <a class="page-footer__link" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
         </div>
-        <div class="page-footer__links">
-          <ul class="page-footer__social-list">
-            <li class="secial-list__item">FB</li>
-            <li class="secial-list__item">INST</li>
-            <li class="secial-list__item">TWITTER</li>
+        <div class="social-links">
+          <ul class="social-links__list">
+            <li class="social-links__item">FB</li>
+            <li class="social-links__item">INST</li>
+            <li class="social-links__item">TWITTER</li>
           </ul>
           <a class="html-academy__link" href="https://htmlacademy.ru/study"></a>
         </div>
