Добавил дополнительные правки
Изменил классы в футере и добавил класс тегу body

--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Device: моноподы для селфи</title>
   </head>
-  <body>
+  <body class="page">
     <h1 class="visually-hidden">Каталог моноподов для селфи</h1>
     <header class="page-header">
       <div class="container">
@@ -181,7 +181,7 @@
             <li class="social-links__item">INST</li>
             <li class="social-links__item">TWITTER</li>
           </ul>
-          <a class="html-academy__link" href="https://htmlacademy.ru/study"></a>
+          <a class="social-links__link" href="https://htmlacademy.ru/study"></a>
         </div>
       </div>
     </footer>
