--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Device: главная страница</title>
   </head>
-  <body>
+  <body class="page">
     <h1 class="visually-hidden">Магазин электроники "Device"</h1>
     <header class="page-header">
       <div class="container">
@@ -252,13 +252,13 @@
           </ul>
           <a class="page-footer__link" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
         </div>
-        <div class="page-footer__links">
-          <ul class="page-footer__social-list">
-            <li class="secial-list__item">FB</li>
-            <li class="secial-list__item">INST</li>
-            <li class="secial-list__item">TWITTER</li>
+        <div class="social-links">
+          <ul class="social-links__list">
+            <li class="social-links__item">FB</li>
+            <li class="social-links__item">INST</li>
+            <li class="social-links__item">TWITTER</li>
           </ul>
-          <a class="html-academy__link" href="https://htmlacademy.ru/study"></a>
+          <a class="social-links__link" href="https://htmlacademy.ru/study"></a>
         </div>
       </div>
     </footer>
