Удалил классы в хедере
Хочу исправить классы в хедере и написать их по БЭМ

--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>Device: главная страница</title>
-  </head>
-  <body class="page">
+  </headс>
+  <body class="page__body">
     <h1 class="visually-hidden">Магазин электроники "Device"</h1>
-    <header class="page-header">
-      <div class="container">
-        <div class="page-header__wrapper">
+    <header>
+      <div>
+        <div>
           <a>
-            <img class="page-header__logo" src="" alt='логотип интернет магазина "Device"'>
+            <img src="" alt='логотип интернет магазина "Device"'>
           </a>
-          <div class="page-header__user-menu">
-            <form class="search-form" action="#" method="get">
-              <input class="search-form__input" type="text" name="search" placeholder="Текст поиска">
-              <button class="search-form__button" type="submit">Найти</button>
+          <div>
+            <form action="#" method="get">
+              <input type="text" name="search" placeholder="Текст поиска">
+              <button type="submit">Найти</button>
             </form>
-            <ul class="user-menu__list">
-              <li class="user-menu__item"><a class="user-menu__link" href="#">Войти</a></li>
-              <li class="user-menu__item"><a class="user-menu__link" href="#">Сравнить</a></li>
-              <li class="user-menu__item"><a class="user-menu__link" href="#">Корзина</a></li>
+            <ul>
+              <li><a href="#">Войти</a></li>
+              <li><a href="#">Сравнить</a></li>
+              <li><a href="#">Корзина</a></li>
             </ul>
           </div>
-          <nav class="page-header__navigation">
-            <ul class="navigation__list">
-              <li class="navigation__item"><a class="navigation__link" href="#">Каталог товаров</a></li>
-              <li class="navigation__item"><a class="navigation__link" href="#">Доставка</a></li>
-              <li class="navigation__item"><a class="navigation__link" href="#">Гарантия</a></li>
-              <li class="navigation__item"><a class="navigation__link" href="#">Контакты</a></li>
+          <nav>
+            <ul>
+              <li><a href="#">Каталог товаров</a></li>
+              <li><a href="#">Доставка</a></li>
+              <li><a href="#">Гарантия</a></li>
+              <li><a href="#">Контакты</a></li>
             </ul>
           </nav>
         </div>
