Исправил шапку сайта
Добавил новый классы для блоков и элементов хедера

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
   </headс>
   <body class="page__body">
     <h1 class="visually-hidden">Магазин электроники "Device"</h1>
-    <header>
-      <div>
-        <div>
+    <header class="page-header">
+      <div class="container">
+        <div class="page-header__wrapper">
           <a>
-            <img src="" alt='логотип интернет магазина "Device"'>
+            <img class="page-header__logo" src="" alt='логотип интернет магазина "Device"'>
           </a>
-          <div>
-            <form action="#" method="get">
-              <input type="text" name="search" placeholder="Текст поиска">
-              <button type="submit">Найти</button>
+          <div class="user-menu">
+            <form class="search-form" action="#" method="get">
+              <input class="search-form__input" type="text" name="search" placeholder="Текст поиска">
+              <button class="search-form__button" type="submit">Найти</button>
             </form>
             <ul>
               <li><a href="#">Войти</a></li>
@@ -23,12 +23,12 @@
               <li><a href="#">Корзина</a></li>
             </ul>
           </div>
-          <nav>
-            <ul>
-              <li><a href="#">Каталог товаров</a></li>
-              <li><a href="#">Доставка</a></li>
-              <li><a href="#">Гарантия</a></li>
-              <li><a href="#">Контакты</a></li>
+          <nav class="site-navigation">
+            <ul class="site-navigation__list">
+              <li class="site-navigation__item"><a class="site-navigation__link" href="#">Каталог товаров</a></li>
+              <li class="site-navigation__item"><a class="site-navigation__link" href="#">Доставка</a></li>
+              <li class="site-navigation__item"><a class="site-navigation__link" href="#">Гарантия</a></li>
+              <li class="site-navigation__item"><a class="site-navigation__link" href="#">Контакты</a></li>
             </ul>
           </nav>
         </div>
