--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Device: главная страница</title>
-  </headс>
+  </head>
   <body class="page__body">
     <h1 class="visually-hidden">Магазин электроники "Device"</h1>
     <header class="page-header">
@@ -17,10 +17,10 @@
               <input class="search-form__input" type="text" name="search" placeholder="Текст поиска">
               <button class="search-form__button" type="submit">Найти</button>
             </form>
-            <ul>
-              <li><a href="#">Войти</a></li>
-              <li><a href="#">Сравнить</a></li>
-              <li><a href="#">Корзина</a></li>
+            <ul class="user-menu__list user-menu__list--main">
+              <li class="user-menu__item user-menu__item--main"><a class="user-menu__link user-menu__link--main" href="#">Войти</a></li>
+              <li class="user-menu__item user-menu__item--main"><a class="user-menu__link user-menu__link--main" href="#">Сравнить</a></li>
+              <li class="user-menu__item user-menu__item--main"><a class="user-menu__link user-menu__link--main" href="#">Корзина</a></li>
             </ul>
           </div>
           <nav class="site-navigation">
