--- a/catalog.html
+++ b/catalog.html
@@ -9,27 +9,27 @@
     <header class="page-header">
       <div class="container">
         <div class="page-header__wrapper">
-          <a href="index.html">
+          <a>
             <img class="page-header__logo" src="" alt='логотип интернет магазина "Device"'>
           </a>
-          <div class="page-header__user-menu">
+          <div class="user-menu">
             <form class="search-form" action="#" method="get">
               <input class="search-form__input" type="text" name="search" placeholder="Текст поиска">
               <button class="search-form__button" type="submit">Найти</button>
             </form>
-            <ul class="user-menu__list">
-              <li class="user-menu__item"><a class="user-menu__link" href="#">Илья Кузьмичев</a></li>
-              <li class="user-menu__item"><a class="user-menu__link" href="#">Выйти</a></li>
-              <li class="user-menu__item"><a class="user-menu__link" href="#">Сравнить</a></li>
-              <li class="user-menu__item"><a class="user-menu__link" href="#">Корзина</a></li>
+            <ul class="user-menu__list user-menu__list--catalog">
+              <li class="user-menu__item user-menu__item--catalog"><a class="user-menu__link user-menu__link--catalog" href="#">Илья Кузьмичёв</a></li>
+              <li class="user-menu__item user-menu__item--catalog"><a class="user-menu__link user-menu__link--catalog" href="#">Выйти</a></li>
+              <li class="user-menu__item user-menu__item--catalog"><a class="user-menu__link user-menu__link--catalog" href="#">Сравнить</a></li>
+              <li class="user-menu__item user-menu__item--catalog"><a class="user-menu__link user-menu__link--catalog" href="#">Корзина</a></li>
             </ul>
           </div>
-          <nav class="page-header__navigation">
-            <ul class="navigation__list">
-              <li class="navigation__item"><a class="navigation__link" href="#">Каталог товаров</a></li>
-              <li class="navigation__item"><a class="navigation__link" href="#">Доставка</a></li>
-              <li class="navigation__item"><a class="navigation__link" href="#">Гарантия</a></li>
-              <li class="navigation__item"><a class="navigation__link" href="#">Контакты</a></li>
+          <nav class="site-navigation">
+            <ul class="site-navigation__list">
+              <li class="site-navigation__item"><a class="site-navigation__link" href="#">Каталог товаров</a></li>
+              <li class="site-navigation__item"><a class="site-navigation__link" href="#">Доставка</a></li>
+              <li class="site-navigation__item"><a class="site-navigation__link" href="#">Гарантия</a></li>
+              <li class="site-navigation__item"><a class="site-navigation__link" href="#">Контакты</a></li>
             </ul>
           </nav>
         </div>
