Поработал над графикой
Экспортировал и оптимизировал графику и добавил ее в разметку

--- a/catalog.html
+++ b/catalog.html
@@ -9,8 +9,8 @@
     <header class="page-header">
       <div class="container">
         <div class="page-header__wrapper">
-          <a>
-            <img class="page-header__logo" src="" alt='логотип интернет магазина "Device"'>
+          <a href="index.html">
+            <img class="page-header__logo" src="img/logo/header-logo.svg" alt='логотип интернет магазина "Device"' width="145" height="36">
           </a>
           <div class="user-menu">
             <form class="search-form" action="#" method="get">
@@ -111,26 +111,26 @@
                 <ol class="catalog__list">
                   <li class="catalog__item">
                     <a class="catalog__link" href="#">
-                      <img class="catalog__image" src="" alt="Любительская селфи-палка">
+                      <img class="catalog__image" src="img/products/product-1.png" alt="Любительская селфи-палка" width="360" height="380">
                       <p class="catalog__product-name">Любительская селфи-палка</p>
                       <b class="catalog__price">500 ₽</b>
                     </a>
                   </li>
                   <li class="catalog__item">
                     <a class="catalog__link" href="#">
-                      <img class="catalog__image" src="" alt="Профессиональная селфи-палка ">
+                      <img class="catalog__image" src="img/products/product-2.png" alt="Профессиональная селфи-палка" width="360" height="380">
                       <p class="catalog__product-name">Профессиональная селфи-палка </p>
                       <b class="catalog__price">1 500 ₽</b>
                     </a>
                   </li><li class="catalog__item">
                     <a class="catalog__link" href="#">
-                      <img class="catalog__image" src="" alt="Непотопляемая селфи-палка">
+                      <img class="catalog__image" src="img/products/product-3.png" alt="Непотопляемая селфи-палка" width="360" height="380">
                       <p class="catalog__product-name">Непотопляемая селфи-палка</p>
                       <b class="catalog__price">2 500 ₽</b>
                     </a>
                   </li><li class="catalog__item">
                     <a class="catalog__link" href="#">
-                      <img class="catalog__image" src="" alt="Селфи-палка «Следуй за мной»">
+                      <img class="catalog__image" src="img/products/product-4.png" alt="Селфи-палка «Следуй за мной»" width="360" height="380">
                       <p class="catalog__product-name">Селфи-палка «Следуй за мной»</p>
                       <b class="catalog__price">1 500 ₽</b>
                     </a>
@@ -156,7 +156,7 @@
     </main>
     <footer class="page-footer">
       <div class="container">
-        <img class="page-footer__logo" src="" alt="Логотип интернет-магазина 'Device'">
+        <img class="page-footer__logo" src="img/logo/footer-logo.svg" alt="Логотип интернет-магазина 'Device'" width="145" height="36">
         <div class="page-footer__body">
           <p class="page-footer__adress">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
           <nav class="site-navigation page-footer__site-navigation">
@@ -174,7 +174,9 @@
             <li class="social-links__item"><a class="social-links__link" href="https://instagram.com/" target="_blank">INST</a></li>
             <li class="social-links__item"><a class="social-links__link" href="https://twitter.com/" target="_blank">TWIT</a></li>
           </ul>
-          <a class="page-footer__link" href="https://htmlacademy.ru/study">HTML</a>
+          <a class="page-footer__link" href="https://htmlacademy.ru/study">
+            <img class="page-footer__img" src="img/social-icons/html.svg" alt="Логотип компании HTML academy" width="115" height="33">
+          </a>
         </div>
       </div>
     </footer>
