--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="container">
         <div class="page-header__wrapper">
           <a>
-            <img class="page-header__logo" src="" alt='логотип интернет магазина "Device"'>
+            <img class="page-header__logo" src="img/logo/header-logo.svg" alt='логотип интернет магазина "Device"' width="145" height="36">
           </a>
           <div class="user-menu">
             <form class="search-form" action="#" method="get">
@@ -41,7 +41,7 @@
             <ol class="products-slider__list">
               <li class="products-slider__item products-slider__item--active">
                 <div class="products-slider__photos">
-                    <img class="products-slider__photo" src="" alt="квадрокоптер">
+                    <img class="products-slider__photo" src="img/slider/slider-1.png" alt="квадрокоптер">
                     <button class="photos__pre-btn">назад</button>
                     <button class="photos__post-btn">вперед</button>
                 </div>
@@ -67,7 +67,7 @@
               </li>
               <li class="products-slider__item">
                 <div class="products-slider__photos">
-                  <img class="products-slider__photo" src="" alt="фитнес-браслет">
+                  <img class="products-slider__photo" src="img/slider/slider-2.png" alt="фитнес-браслет" width="384" height="486">
                   <button class="photos__pre-btn">назад</button>
                   <button class="photos__post-btn">вперед</button>
               </div>
@@ -90,7 +90,7 @@
               </li>
               <li class="products-slider__item">
                 <div class="products-slider__photos">
-                  <img class="products-slider__photo" src="" alt="селфи-палка">
+                  <img class="products-slider__photo" src="img/slider/slider-3.png" alt="селфи-палка" width="384" height="486">
                   <button class="photos__pre-btn">назад</button>
                   <button class="photos__post-btn">вперед</button>
               </div>
@@ -126,7 +126,7 @@
             <li class="product-sections__item">
               <a class="product-sections__link" href="#">
                 <div class="image-wrapper">
-                  <svg class="product-sections__image"></svg>
+                  <img class="product-sections__image" src="img/icons/glasses.svg" width="97" height="55" alt="Очки виртуальной реальности"></img>
                 </div>
                 <b class="product-sections__text">Виртуальная реальность</b>
               </a>
@@ -134,7 +134,7 @@
             <li class="product-sections__item">
               <a class="product-sections__link" href="catalog.html">
                 <div class="image-wrapper">
-                  <svg class="product-sections__image"></svg>
+                  <img class="product-sections__image" src="img/icons/monopodes.svg" width="86" height="117" alt="Монопод для селфи"></img>
                 </div>
                 <b class="product-sections__text">Моноподы для селфи</b>
               </a>
@@ -142,7 +142,7 @@
             <li class="product-sections__item">
               <a class="product-sections__link" href="#">
                 <div class="image-wrapper">
-                  <svg class="product-sections__image"></svg>
+                  <img class="product-sections__image" src="img/icons/cam.svg" width="71" height="87" alt="Экшн-камера"></img>
                 </div>
                 <b class="product-sections__text">Экшн-камеры</b>
               </a>
@@ -150,7 +150,7 @@
             <li class="product-sections__item">
               <a class="product-sections__link" href="#">
                 <div class="image-wrapper">
-                  <svg class="product-sections__image"></svg>
+                  <img class="product-sections__image" src="img/icons/bracelet.svg" width="107" height="65" alt="Фитнесс-браслет"></img>
                 </div>
                 <b class="product-sections__text">Фитнес-браслеты</b>
               </a>
@@ -158,7 +158,7 @@
             <li class="product-sections__item">
               <a class="product-sections__link" href="#">
                 <div class="image-wrapper">
-                  <svg class="product-sections__image"></svg>
+                  <img class="product-sections__image" src="img/icons/watch.svg" width="56" height="98" alt="Умные часы"></img>
                 </div>
                 <b class="product-sections__text">Умные часы</b>
               </a>
@@ -166,7 +166,7 @@
             <li class="product-sections__item">
               <a class="product-sections__link" href="#">
                 <div class="image-wrapper">
-                  <svg class="product-sections__image"></svg>
+                  <img class="product-sections__image" src="img/icons/quadcopter.svg" width="132" height="70" alt="Квадрокоптер"></img>
                 </div>
                 <b class="product-sections__text">Квадрокоптеры</b>
               </a>
@@ -201,7 +201,7 @@
         </section>
         <div class="delivery-info">
           <div class="delivery-info__image-wrapper">
-            <svg class="delivery-info__image"></svg>
+            <img class="delivery-info__image" src="img/icons/truck.svg" width="47px" height="31" alt="Грузовик доставляет ваш заказ"></img>
           </div>
           <b class="delivery-info__text">Доставим редкий товар под заказ</b>
         </div>
@@ -242,7 +242,7 @@
     </main>
     <footer class="page-footer">
       <div class="container">
-        <img class="page-footer__logo" src="" alt="Логотип интернет-магазина 'Device'">
+        <img class="page-footer__logo" src="img/logo/footer-logo.svg" alt="Логотип интернет-магазина 'Device'" width="145" height="36">
         <div class="page-footer__body">
           <p class="page-footer__adress">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
           <nav class="site-navigation page-footer__site-navigation">
@@ -260,7 +260,9 @@
             <li class="social-links__item"><a class="social-links__link" href="https://instagram.com/" target="_blank">INST</a></li>
             <li class="social-links__item"><a class="social-links__link" href="https://twitter.com/" target="_blank">TWIT</a></li>
           </ul>
-          <a class="page-footer__link" href="https://htmlacademy.ru/study">HTML</a>
+          <a class="page-footer__link" href="https://htmlacademy.ru/study">
+            <img class="page-footer__img" src="img/social-icons/html.svg" alt="Логотип компании HTML academy" width="115" height="33">
+          </a>
         </div>
       </div>
     </footer>
