--- a/catalog.html
+++ b/catalog.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>Device: моноподы для селфи</title>
+    <link rel="stylesheet" href="styles/style.css">
   </head>
-  <body class="page">
+  <body class="page__body">
     <h1 class="visually-hidden">Каталог моноподов для селфи</h1>
     <header class="page-header">
       <div class="container">
@@ -174,7 +175,7 @@
             <li class="social-links__item"><a class="social-links__link" href="https://instagram.com/" target="_blank">INST</a></li>
             <li class="social-links__item"><a class="social-links__link" href="https://twitter.com/" target="_blank">TWIT</a></li>
           </ul>
-          <a class="page-footer__link" href="https://htmlacademy.ru/study">
+          <a class="page-footer__link" href="https://htmlacademy.ru/study" target="_blank">
             <img class="page-footer__img" src="img/social-icons/html.svg" alt="Логотип компании HTML academy" width="115" height="33">
           </a>
         </div>
