--- a/catalog.html
+++ b/catalog.html
@@ -37,7 +37,6 @@
       </div>
     </header>
     <main class="main-content main-content-catalog">
-      <h1 class="visually-hidden">Каталог моноподоп для селфи</h1>
       <div class="container">
         <section class="products-catalog">
           <div class="products-catalog__header">
@@ -50,7 +49,7 @@
           </div>
           <div class="products-catalog__body">
             <div class="products-filter">
-              <h3 class="products-filter__title">Фильтр:</h3>
+              <h3 class="products-filter__main-title">Фильтр:</h3>
               <form class="products-filter__search-form" action="#" method="get">
                 <fieldset class="products-filter__price">
                   <legend class="products-filter__title">Стоимость</legend>
@@ -65,31 +64,31 @@
                 <fieldset class="products-filter__color">
                   <legend class="products-filter__title">Цвет</legend>
                   <label>
-                  <input class="products-filter__checkbox" type="checkbox" value="black" checked> Черный
+                  <input class="products-filter__checkbox" type="checkbox" value="black" checked> <span class="products-filter__checkbox-text">Черный</span>
                   </label>
                   <label>
-                    <input class="products-filter__checkbox" type="checkbox" value="white" checked> Белый
+                    <input class="products-filter__checkbox" type="checkbox" value="white" checked> <span class="products-filter__checkbox-text">Белый</span>
                   </label>
                   <label>
-                    <input class="products-filter__checkbox" type="checkbox" value="blue"> Синий
+                    <input class="products-filter__checkbox" type="checkbox" value="blue"> <span class="products-filter__checkbox-text">Синий</span>
                   </label>
                   <label>
-                    <input class="products-filter__checkbox" type="checkbox" value="red"> Красный
+                    <input class="products-filter__checkbox" type="checkbox" value="red"> <span class="products-filter__checkbox-text">Красный</span>
                   </label>
                   <label>
-                    <input class="products-filter__checkbox" type="checkbox" value="pink"> Розовый
+                    <input class="products-filter__checkbox" type="checkbox" value="pink"> <span class="products-filter__checkbox-text">Розовый</span>
                   </label>
                 </fieldset>
                 <fieldset class="products-filter__bluetooth">
                   <legend class="products-filter__title">Bluetooth</legend>
                   <label>
-                    <input class="products-filter__radio" type="radio" value="have"> Есть
+                    <input class="products-filter__radio" type="radio" value="have"> <span class="products-filter__radio-text">Есть</span>
                   </label>
                   <label>
-                    <input class="products-filter__radio" type="radio" value="haven't"> Нет
+                    <input class="products-filter__radio" type="radio" value="haven't"> <span class="products-filter__radio-text">Нет</span>
                   </label>
                 </fieldset>
-                <button class="products-filter__button" type="submit">Показать</button>
+                <button class="products-filter__button button" type="submit">Показать</button>
               </form>
             </div>
             <div class="catalog">
@@ -167,13 +166,13 @@
               <li class="site-navigation__item"><a class="site-navigation__link" href="#">Контакты</a></li>
             </ul>
           </nav>
-          <a class="pag-footer__tel tel" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
+          <a class="page-footer__tel tel" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
         </div>
         <div class="page-footer__footer">
           <ul class="social-links">
-            <li class="social-links__item"><a class="social-links__link" href="https://www.facebook.com/" target="_blank">FB</a></li>
-            <li class="social-links__item"><a class="social-links__link" href="https://instagram.com/" target="_blank">INST</a></li>
-            <li class="social-links__item"><a class="social-links__link" href="https://twitter.com/" target="_blank">TWIT</a></li>
+            <li class="social-links__item"><a class="social-links__link" href="https://www.facebook.com/" target="_blank"><span class="visually-hidden">Facecbook<span></a></li>
+            <li class="social-links__item"><a class="social-links__link" href="https://instagram.com/" target="_blank"><span class="visually-hidden">Instagram<span></a></li>
+            <li class="social-links__item"><a class="social-links__link" href="https://twitter.com/" target="_blank"><span class="visually-hidden">Twitter<span></a></li>
           </ul>
           <a class="page-footer__link" href="https://htmlacademy.ru/study" target="_blank">
             <img class="page-footer__img" src="img/social-icons/html.svg" alt="Логотип компании HTML academy" width="115" height="33">
